<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_short_description">Learn how to make simple Java apps in Android Studio. 📱</string>
    <string name="notification_update_title">A new update available!</string>
    <string name="summary_notification_update">A new version of the app is available. Click to update!</string>
    <string name="notification_last_time_used_title">It\'s been a while!</string>
    <string name="summary_notification_last_time_used">We missed you! Let\'s learn something new about Android!</string>
    <string name="welcome">Welcome</string>
    <string name="summary_browse_terms_of_service_and_privacy_policy">Read and agree to our Terms of Service and Privacy Policy to continue</string>
    <string name="agree">Agree</string>
    <string name="home">Home</string>
    <string name="announcement_title">A New App Is Here!</string>
    <string name="announcement_subtitle">Check out the latest Android Studio Tutorials app. Learn Jetpack Compose, Material 3, and more.</string>
    <string name="main_card_title">Discover Android Studio Tutorials</string>
    <string name="main_card_subtitle">Featuring Kotlin and Java Editions</string>
    <string name="main_card_description">The Kotlin Edition has been updated with dynamic lessons, AI assistant, and more. Experience the future of Android development!</string>
    <string name="get_on_google_play">Get it on Google Play</string>
    <string name="play_store">Play Store</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_start">Start a New Project…</string>
    <string name="step1">Step 1</string>
    <string name="summary_first_step">The first step to create a new project in Android Studio is to click on the <b>New project</b> button as shown in the image and continue to the next step.</string>
    <string name="step2">Step 2</string>
    <string name="summary_second_step">The second step is to select the activity type that suits your app. You can choose from some presets that can simplify your work. Select one of them and click on the <b>next</b> button.</string>
    <string name="step3">Step 3</string>
    <string name="summary_third_step">The third and final step is to configure your app settings, such as the app name, <b>package name</b>, preferred <b>programming language</b> and <b>minimum SDK</b>. You can learn more about them on <a href="https://developer.android.com/">Android Developers</a>.</string>
    <string name="basics">Basics</string>
    <string name="shortcuts">Android Studio Shortcuts</string>
    <string name="shortcuts_title">Shortcuts</string>
    <string name="description">Description</string>
    <string name="general">General</string>
    <string name="save_all">Save all</string>
    <string name="synchronize">Synchronize</string>
    <string name="maximize">Maximize/minimize editor</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="file_inspect">Inspect current file with current profile</string>
    <string name="quick_switch_theme">Quick switch theme</string>
    <string name="open_settings">Open settings dialogue</string>
    <string name="open_project">Open project structure dialog</string>
    <string name="switch_tabs">Switch between tabs and tool window</string>
    <string name="refactoring">Refactoring</string>
    <string name="move">Move</string>
    <string name="safe_delete">Safe delete</string>
    <string name="rename">Rename</string>
    <string name="change_signature">Change signature</string>
    <string name="inline">Inline</string>
    <string name="extract_method">Extract method</string>
    <string name="extract_field">Extract field</string>
    <string name="extract_variable">Extract variable</string>
    <string name="extract_constant">Extract constant</string>
    <string name="build_and_run">Build &amp; run</string>
    <string name="build">Build</string>
    <string name="apply_changes">Apply changes (with Instant Run)</string>
    <string name="debugging">Debugging</string>
    <string name="debug">Debug</string>
    <string name="step_over">Step over</string>
    <string name="step_into">Step into</string>
    <string name="smart_step_into">Smart step into</string>
    <string name="step_out">Step out</string>
    <string name="run_to_cursor">Run to cursor</string>
    <string name="evaluate_expression">Evaluate expression</string>
    <string name="resume_program">Resume program</string>
    <string name="toggle_breakpoint">Toggle breakpoint</string>
    <string name="navigation_and_searching">Navigation &amp; searching</string>
    <string name="writing_code">Writing code</string>
    <string name="version_control">Version control &amp; local history</string>
    <string name="history">History</string>
    <string name="features">Features</string>
    <string name="choose_your_option">Choose your option</string>
    <string name="first_radio_option">Option 1</string>
    <string name="second_radio_option">Option 2</string>
    <string name="display_option">Display option</string>
    <string name="current_time">Current Time</string>
    <string name="change_time">Change Time</string>
    <string name="password_show">Show password.</string>
    <string name="show_code">Show code</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="normal">Normal</string>
    <string name="ad_id">Ad id [AD_ID]</string>
    <string name="internet">Internet [INTERNET]</string>
    <string name="post_notifications">Post notifications [POST_NOTIFICATIONS]</string>
    <string name="runtime">Runtime</string>
    <string name="access_network_state">Access network state [ACCESS_NETWORK_STATE]</string>
    <string name="access_notification_policy">Access notification policy [ACCESS_NOTIFICATION_POLICY]</string>
    <string name="billing">Billing [BILLING]</string>
    <string name="check_license">Check license [CHECK_LICENSE]</string>
    <string name="foreground_service">Foreground service [FOREGROUND_SERVICE]</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="share">Share</string>
    <string name="summary_preference_permissions_ad_id">Allows the app to retrieve and use the advertising identifier associated with the user\'s device, providing personalized ads, measuring ad effectiveness, and showing ads on Android 13 or later devices.</string>
    <string name="summary_preference_permissions_internet">Allows the app to establish an internet connection to send error reports or check for updates.</string>
    <string name="summary_preference_permissions_post_notifications">Allows the app to display notifications on the devices with Android 13 or later.</string>
    <string name="summary_preference_permissions_access_network_state">Allows the app to check network connectivity and retrieve information about Wi-Fi, including enabled status and connected Wi-Fi device names.</string>
    <string name="summary_preference_permissions_billing">Allows the app to use the Google Play Billing Library to handle in-app purchases and donations.</string>
    <string name="summary_preference_permissions_check_license">Allows the app to verify its compliance with the license agreement and enforce licensing terms to protect intellectual property.</string>
    <string name="summary_preference_permissions_access_notification_policy">Allows the app to access and modify the device\'s notification policy, controlling how and when notifications are displayed to the user and providing custom notification management features.</string>
    <string name="summary_preference_permissions_foreground_service">Allows the app to create and use services that run in the foreground, giving them priority over other background processes and improving performance and reliability.</string>
    <string name="summary_android_history" tools:ignore="StringFormatCount,StringFormatMatches">Android is a mobile operating system developed by Google. It was first released as a beta version on November 5, 2007 and the first commercial version, Android 1.0, was launched on September 23, 2008. Android is based on a modified version of the Linux kernel and other open source software.\n\nAndroid Studio is the official integrated development environment (IDE) for Android app development. It was announced by Google at its I/O conference on May 15, 2013 and released for public use on December 8, 2014. Android Studio is based on IntelliJ IDEA, a popular Java IDE.\n\nKotlin is a cross-platform programming language that can run on Java Virtual Machine (JVM), Android, browser and native platforms. It was created by JetBrains, a software company based in Prague. Kotlin was first announced in July 2011 and released as an open source project in February 2012.\n\nGoogle announced its support for Kotlin as an official language for Android app development at its I/O conference on May 17, 2017. Since then, Kotlin has become one of the most popular languages for Android developers. According to Google\'s data from October 2020, more than 70% of the top 1000 apps on Google Play use Kotlin.</string>
    <string name="summary_android_features">Android is not only an operating system, but also a platform that offers a range of features and capabilities for users and developers. Some of the features of Android include:\n\n- Near Field Communication (NFC), which allows you to share data, make payments, and connect with other devices wirelessly.\n- Alternate keyboards, which let you customize your input method with different layouts, languages, and themes.\n- IR transmission, which enables you to use your phone as a remote control for TVs, air conditioners, and other appliances.\n- No-touch control, which lets you perform actions on your phone without touching the screen by using gestures or voice commands.\n- Automation, which allows you to set up routines and triggers for your phone to perform certain tasks automatically.\n- Wireless app downloads, which let you install apps from your computer or web browser without connecting your phone with a cable.\n- Storage and battery swap, which give you the option to expand your phone\'s memory or replace its battery easily.\n- Custom home screen, which lets you personalize your phone\'s appearance with widgets, wallpapers, icons, and launchers.\n\nAndroid Studio is the best tool for developing Android apps. It offers many features and benefits for developers such as:\n\n- Code editor with syntax highlighting, code completion, refactoring, debugging, testing, and linting tools.\n- Layout editor with drag-and-drop interface for designing user interfaces.\n- Emulator with fast boot and snapshot support for testing apps on different devices and configurations.\n- Firebase integration with services such as authentication, database, storage, analytics, crash reporting etc. \n- Gradle-based build system with dependency management,\ncustomization,\noptimization,\nsigning,\ndistribution options etc. \n\nWith Android Studio,\nyou can create amazing apps for Android devices using Kotlin,\na modern programming language that is concise,\nsafe,\nexpressive,\nand interoperable with Java.</string>
    <string name="tooltip_show_code">Show code syntax</string>
    <string name="hint_password">Enter your password…</string>
    <string name="view_in_google_play">View in Google Play Store</string>
    <string name="version_info">Version info</string>
    <string name="beta_program">Beta program</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="analytics_storage">Analytics storage</string>
    <string name="ad_storage">Ad storage</string>
    <string name="ad_user_data">Ad user data</string>
    <string name="ad_personalization">Ad personalization</string>
</resources>