<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/view_in_google_play"
        android:title="@string/view_in_google_play"
        app:showAsAction="never" />
    <item
        android:id="@+id/version_info"
        android:title="@string/version_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/beta_program"
        android:title="@string/beta_program"
        app:showAsAction="never" />
    <item
        android:id="@+id/terms_of_service"
        android:title="@string/terms_of_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/privacy_policy"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />
    <item
        android:id="@+id/oss"
        android:title="@string/open_source_licenses"
        app:showAsAction="never" />
</menu>