<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/general">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.d4rk.androidtutorials.java.ui.screens.android.lessons.basics.shortcuts.tabs.GeneralShortcutsActivity"
            android:targetPackage="com.d4rk.androidtutorials.java" />
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/refactoring">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.d4rk.androidtutorials.java.ui.screens.android.lessons.basics.shortcuts.tabs.RefactoringShortcutsActivity"
            android:targetPackage="com.d4rk.androidtutorials.java" />
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/build_and_run">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.d4rk.androidtutorials.java.ui.screens.android.lessons.basics.shortcuts.tabs.BuildShortcutsActivity"
            android:targetPackage="com.d4rk.androidtutorials.java" />
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/debugging">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.d4rk.androidtutorials.java.ui.screens.android.lessons.basics.shortcuts.tabs.DebuggingShortcutsActivity"
            android:targetPackage="com.d4rk.androidtutorials.java" />
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/navigation_and_searching">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.d4rk.androidtutorials.java.ui.screens.android.lessons.basics.shortcuts.tabs.NavigationAndSearchingShortcutsActivity"
            android:targetPackage="com.d4rk.androidtutorials.java" />
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/writing_code">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.d4rk.androidtutorials.java.ui.screens.android.lessons.basics.shortcuts.tabs.CodeShortcutsActivity"
            android:targetPackage="com.d4rk.androidtutorials.java" />
    </androidx.preference.Preference>
    <androidx.preference.Preference
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:icon="@drawable/ic_shortcut"
        app:title="@string/version_control">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.d4rk.androidtutorials.java.ui.screens.android.lessons.basics.shortcuts.tabs.VersionControlShortcutsActivity"
            android:targetPackage="com.d4rk.androidtutorials.java" />
    </androidx.preference.Preference>
</androidx.preference.PreferenceScreen>