<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/check_analytics_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analytics_storage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/check_ad_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ad_storage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_analytics_storage" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/check_ad_user_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ad_user_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_ad_storage" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/check_ad_personalization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ad_personalization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_ad_user_data" />

</androidx.constraintlayout.widget.ConstraintLayout>
