<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showPasswordButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="Show"
            android:textSize="0sp"
            app:icon="@drawable/ic_visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/editText"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <requestFocus />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonShowPassword"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextLayout" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_button_show_syntax"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@string/tooltip_show_code"
        android:text="@string/show_code"
        android:textSize="14sp"
        android:tooltipText="@string/tooltip_show_code"
        app:icon="@drawable/ic_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>