<?xml version="1.0" encoding="utf-8"?>
<me.zhanghai.android.fastscroll.FastScrollScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_history"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/history"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_android_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/summary_android_history"
            app:layout_constraintTop_toBottomOf="@id/text_view_history"
            tools:ignore="VisualLintLongText" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:adSize="LARGE_BANNER"
            app:adUnitId="@string/ad_banner_unit_id"
            app:layout_constraintTop_toBottomOf="@id/text_view_android_history" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_features"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/features"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ad_view" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_android_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/summary_android_features"
            app:layout_constraintTop_toBottomOf="@id/text_view_features"
            tools:ignore="VisualLintLongText" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:adSize="FULL_BANNER"
            app:adUnitId="@string/ad_banner_unit_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_android_features" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</me.zhanghai.android.fastscroll.FastScrollScrollView>